@@ -1,3 +1,8 @@
+= todorb 1.0.0, 2010-06-22 16:16
+* using subcommand gem
+* suboptions will come *after* command but before arguments
+
+
 = todorb 0.2.2, 2010-06-15
 * Added subtask addition. One may add subtasks under a task.
 * This effects everything! Deleting a task, you may wanna delete all
